Fix some stuff on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,13 @@
+/* @format */
+
 body {
 	color: white;
 	background-color: black;
 	font-family: Arial;
+}
+
+@media screen and (orientation: landscape) {
+	.width {
+		max-width: 600px;
+	}
 }
